--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -2375,7 +2375,342 @@ class AllInput extends StatelessWidget{
 
 ```
 
+# 路由
 
+在使用`MaterialApp()`时，可以使用路由，来实现页面之间的切换，而这里面的路由实现方式是通过将页面加入**栈**与移出**栈**的思想
+
+## 最简单的页面切换
+
+通过使用`Navigator.push`来将新页面加入**栈**
+
+```dart
+Navigator.push(context, MaterialPageRoute(
+	builder: (context){
+		return const NextPage();
+	}
+));
+```
+
+## 传参数入页面
+
+1. 新建一个**页面**，和一个**实体类**，并在页面入口方法中**添加属性**
+
+   ```dart
+   class Person{
+     String name;
+     int age;
+     Person(this.name,this.age);
+     @override
+     String toString() {
+       return "{name:$name,age:$age}";
+     }
+   }
+   class AttrPage extends StatelessWidget{
+     final String text;
+     final Person person;
+     const AttrPage({
+       super.key,
+       required this.text,
+       required this.person
+   });
+   
+     @override
+     Widget build(BuildContext context) {
+       return Scaffold(
+         appBar: AppBar(
+           title: const Text("AttrPage"),
+           backgroundColor: Colors.cyanAccent,
+         ),
+         body: Center(
+           child: Column(
+             children: [
+               Text("text:$text"),
+               Text("person:${person.toString()}")
+             ],
+           ),
+         ),
+       );
+     }
+   }
+   ```
+
+2. 在主页面的按钮添加**点击事件**，用`Navigator.push`将页面**加入栈**，并在返回页面的对象里**写入属性的参数**
+
+   ```dart
+   onPressed: (){
+   	Navigator.push(context, MaterialPageRoute(
+   		builder: (context){
+   			return AttrPage(text: "TestText", person: Person("jack",10));
+   		}
+   	));
+   }
+   ```
+
+3. 效果
+
+![image-20240302204856669](https://www.z4a.net/images/2024/03/02/image-20240302204856669.png)
+
+## 退出页面返回值
+
+通过`Navigator.push`加入的页面，左上角都会有一个**返回**的按钮，但是这个按钮**返回值**为`null`，所以需要`Navigator.pop`在退出页面时，返回一个值
+
+1. 新建一个页面，并添加一个按钮，添加点击事件，使用`Navigator.pop`返回页面
+
+   ```dart
+   class BackAttrPage extends StatelessWidget{
+     const BackAttrPage({super.key});
+     @override
+     Widget build(BuildContext context) {
+       return Scaffold(
+         appBar: AppBar(
+           title: const Text("BackAttrPage"),
+           backgroundColor: Colors.green,
+         ),
+         body: Center(
+           child: ElevatedButton(
+             onPressed: (){
+               Navigator.pop(context,"hello world");
+             },
+             child: const Text("返回"),
+           ),
+         ),
+       );
+     }
+   }
+   ```
+
+
+
+2. 在主页添加按钮进入这个界面，但是这里的方法需要在`()`后加`async`表示这个方法为异步方法，并在`Navigator.push`前加`await`表示等待这个方法运行完，在进行下一步，然后用一个变量给`Navigator.push`赋值，为了接收页面的返回值
+
+   ```dart
+   onPressed: ()async{
+   	var result = await Navigator.push(context, MaterialPageRoute(
+   		builder: (context){
+   			return const BackAttrPage();
+   		}
+   	));
+   	 print("返回值：$result");
+   }
+   ```
+
+3. 点击默认的返回按钮和点击自己的返回按钮的效果
+
+![image-20240302204959441](https://www.z4a.net/images/2024/03/02/image-20240302204959441.png)
+
+
+
+## 使用MaterialApp()的routes
+
+`MaterialApp()`有个routes属性，这个属性是为了方便添加页面，形式为`"路由名":(context) => const 页面()`
+
+```dart
+routes: {
+	"route1":(context) => const Router1Page(),
+	"route2":(context) => const Router2Page()
+}
+```
+
+然后我们就可以通过`Navigator.pushNamed(context,"路由名")`去进入页面
+
+### 传参问题
+
+因为通过routes命名路由进入页面的方式无法直接传输参数，但是Navigator.pushNamed里的arguments可以将参数传输到页面里
+
+1. 在按钮处添加事件，并在Navigator.pushNamed里添加arguments属性，将要传的参数写在`{}`里，以`,`隔开
+
+   ```dart
+   onPressed: (){
+   	Navigator.pushNamed(
+   		context,
+   		"route1",
+   		arguments: [
+   			"TestText",
+   			123
+   		]
+   	);
+   }
+   ```
+
+2. 在返回页面的方法里，通过`ModalRoute.of(context)?.settings.arguments`获取传入的数据，如果只传一个参数，那就直接将变量转成String类型即可，但是如果是其他的形式，例如：我传的是一个List，我需要将变量转成字符串，然后再将它转换成List才能拿出来使用
+
+   ```dart
+   class Router1Page extends StatelessWidget{
+     const Router1Page({super.key});
+   
+     @override
+     Widget build(BuildContext context) {
+       var args = ModalRoute.of(context)?.settings.arguments;
+       List<String> argList = args.toString().substring(1,args.toString().length-1).split(",");
+       return Scaffold(
+         appBar: AppBar(
+           title: const Text("Page1111"),
+           backgroundColor: Colors.cyan,
+         ),
+         body: Center(
+           child: Column(
+             children: [
+               Text("text:${argList[0]}"),
+               Text("num:${argList[1]}"),
+             ],
+           ),
+         ),
+       );
+     }
+   }
+   ```
+
+3. 效果
+
+![image-20240302212751760](https://www.z4a.net/images/2024/03/02/image-20240302212751760.png)
+
+### 返回值[与普通的一样]
+
+返回值的方法与普通进入页面的方法一样，没有问题
+
+效果：
+
+![image-20240302213141227](https://www.z4a.net/images/2024/03/02/image-20240302213141227.png)
+
+
+
+## route的钩子函数
+
+顾名思义就是访问routes时，执行的函数
+
+| 函数                 | 说明                                                         |
+| -------------------- | ------------------------------------------------------------ |
+| `onGenerateRoute`    | 当页面没有**Route**命名但依旧使用`Navigator.pushNamed`会执行*[需要单独出来讲]* |
+| `onUnknownRoute`     | 当页面没有**Route**命名但依旧使用`Navigator.pushNamed`会执行，**防止访问未知页面用** |
+| `navigatorObservers` | 监控页面的**入栈**和**出栈**                                 |
+
+### onGenerateRoute与onUnknownRoute
+
+#### onGenerateRoute
+
+这个函数的使用方法是为了：
+
+- 使用路由命名方式传参的问题
+- 防止没有权限的用户访问页面
+- *访问空页面[不适用]*
+
+在使用这个函数的时候，需要一个**参数**`RouteSettings settings`，通过`settings.name`可以获取当前使用`Navigator.pushNamed`时，访问的**路由名**
+
+```dart
+onGenerateRoute: (RouteSettings settings){
+      var routeName = settings.name;
+      return null;
+}
+```
+
+可以通过给访问特定的路由名加个**权限**，或者**传参**
+
+```dart
+//MaterialApp里的onGenerateRoute属性
+onGenerateRoute: (RouteSettings settings){
+      var routeName = settings.name;
+      if(routeName == "noReg"){
+        print("如果没有注册在route里,但是依旧要Navigator.pushNamed访问，会显示这一行，route name：$routeName");
+        return MaterialPageRoute(builder: (context){
+          return const Route2Page(text: "testText",);
+        }
+        );
+      }
+      return null;
+}
+```
+
+```dart
+//页面
+class Route2Page extends StatelessWidget{
+  const Route2Page({super.key,required this.text});
+  final String text;
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        title: const Text("route2"),
+        backgroundColor: Colors.amberAccent,
+      ),
+      body: Center(
+        child: Text("没在routes注册，也能通过Navigator.pushNamed访问，传入值：$text"),
+      ),
+    );
+  }
+}
+```
+
+#### onUnknownRoute
+
+这个函数的执行时机在于当页面没有**Route**命名但依旧使用`Navigator.pushNamed`且`onGenerateRoute`没有返回页面
+
+也就是当页面不存在的时候，这个函数会执行，且可以自定义不存在页面
+
+```dart
+//MaterialApp里的onUnknownRoute属性
+onUnknownRoute: (RouteSettings settings){
+      print("访问了不存在的页面,");
+      return MaterialPageRoute(builder: (context){
+        return const NoExitPage();
+      });
+    }
+```
+
+```dart
+//不存在页面提示页面
+class NoExitPage extends StatelessWidget{
+  const NoExitPage({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Scaffold(
+      appBar: AppBar(
+        title: const Text("页面不存在"),
+        backgroundColor: Colors.amberAccent,
+      ),
+      body: const Center(
+        child: Text("访问了不存在的页面！"),
+      ),
+    );
+  }
+}
+```
+
+### navigatorObservers
+
+这个钩子函数，会全程监控页面的入栈和出栈，只要栈堆有变化，就会执行
+
+```dart
+import 'package:flutter/material.dart';
+// demo21 监控路由
+void main(){
+  runApp(MaterialApp(
+    navigatorObservers: [DemoNO()],
+    home: const HomePage(),
+    routes: {
+      "test1": (context) => const Test1Page(),
+      "test2": (context) => const Test2Page(),
+    },
+  ));
+}
+
+class DemoNO extends NavigatorObserver{
+  @override
+  void didPush(Route route, Route? previousRoute) {
+    var name = route.settings.name;
+    print("$name页面被加入栈");
+    super.didPush(route, previousRoute);
+  }
+  @override
+  void didPop(Route route, Route? previousRoute) {
+    var name = route.settings.name;
+    print("$name页面被移出栈");
+    super.didPop(route, previousRoute);
+  }
+}
+```
+
+![image-20240302220954064](https://www.z4a.net/images/2024/03/02/image-20240302220954064.png)
 
 
 # demo
