--- a/_posts/2024-02-15-Flutter-入门到入土[总].md
+++ b/_posts/2024-02-15-Flutter-入门到入土[总].md
@@ -2171,6 +2171,8 @@ class Test6 extends StatelessWidget{
 
 ### Controller
 
+------
+
 一般来说，使用控制器直接使用该对象就好了
 
 ```dart
@@ -2201,6 +2203,8 @@ selection的参数为TextSelection.fromPosition(*)，而里面又需要TextPosit
 
 
 ### decoration
+
+------
 
 可以让输入框自定义成想要的样式，参数为`InputDecoration()`，以下为`InputDecoration()`的属性
 
@@ -2246,6 +2250,8 @@ selection的参数为TextSelection.fromPosition(*)，而里面又需要TextPosit
 最后两个参数的属性`borderSide`可以设置线条颜色，参数为`BorderSide(color: Colors.*)`
 
 ### 放demo
+
+------
 
 ![image-20240302195145912](https://www.z4a.net/images/2024/03/02/image-20240302195145912.png)
 
@@ -2375,11 +2381,298 @@ class AllInput extends StatelessWidget{
 
 ```
 
+
+
+## Dialog
+
+### 简单的Dialog
+
+------
+
+通过`AlertDialog()`，我们可以很快的创建出一个确认窗口
+
+但是在使用`AlertDialog()`时，需要使用`showDialog()`，才能显示
+
+1. 新建一个方法，并携带`context`变量，定义一个`result`变量和打印result
+
+   ```dart
+   void alertDialog(context){
+   	var result;
+   	print("返回值：$result");
+   }
+   ```
+
+2. 使用`showDialog()`，以及将方法变为异步方法，这里来看一下showDialog的属性
+
+   | 属性                 | 说明                       |
+      | -------------------- | -------------------------- |
+   | `context`            | 不理，就填`context`        |
+   | `builder`            | 返回的**Dialog**类型       |
+   | `barrierDismissible` | 是否点击蒙版关闭**Dialog** |
+   | `useSafeArea`        | 是否预留安全区域           |
+
+   ```dart
+   void alertDialog(context)async{
+   	var result = await showDialog(
+   		barrierDismissible: true,
+       	useSafeArea: true,
+     		context: context,
+           builder: builder
+   	);
+   	print("返回值：$result");
+   }
+   ```
+
+3. 让`builder`返回`AlertDialog()`
+
+   ```dart
+   void alertDialog(context)async{
+       var result = await showDialog(
+           barrierDismissible: true,
+           useSafeArea: true,
+           context: context,
+           builder: (context)=>AlertDialog()
+       );
+       print("返回值：$result");
+   }
+   ```
+
+4. 编辑`AlertDialog()`的`title，content，action`
+
+   ```dart
+   void alertDialog(context)async{
+       var result = await showDialog(
+           barrierDismissible: true,
+           useSafeArea: true,
+           context: context,
+           builder: (context)=>AlertDialog(
+             title: const Text("标题"),
+             content: const Text("内容"),
+             actions: [
+               TextButton(
+                   onPressed: (){
+                     print("确定");
+                     Navigator.pop(context,"confirm");
+                   },
+                   child: const Text("确定")
+               ),
+               TextButton(
+                   onPressed: (){
+                     print("取消");
+                     Navigator.pop(context,"cancel");
+                   },
+                   child: const Text("取消")
+               ),
+             ],
+           )
+       );
+       print("返回值：$result");
+     }
+   ```
+
+5. 最后创建一个按钮使用这个方法
+
+   ```dart
+   onPressed: (){
+   	selectDialog(context);
+   },
+   ```
+
+6. 效果
+
+   ![image-20240303005012077](https://www.z4a.net/images/2024/03/03/image-20240303005012077.png)
+
+### 多选项Dialog
+
+------
+
+使用`showDialog()`可以创建出多选项**Dialog**
+
+与普通的**Dialog**创建方法相同，只是里面的`children`用了`SimpleDialogOption()`，相当于按钮
+
+```dart
+void selectDialog(context)async{
+    var result = await showDialog(
+        barrierDismissible: false,
+        context: context,
+        builder: (context)=>SimpleDialog(
+          title: const Text("标题"),
+          children: [
+            SimpleDialogOption(
+              onPressed: (){
+                print("选项1");
+                Navigator.pop(context,"选项1");
+              },
+              child: const Text("选项1"),
+            ),
+            const Divider(),
+            SimpleDialogOption(
+              onPressed: (){
+                print("选项2");
+                Navigator.pop(context,"选项2");
+              },
+              child: const Text("选项2"),
+            ),
+            const Divider(),
+            SimpleDialogOption(
+              onPressed: (){
+                print("选项3");
+                Navigator.pop(context,"选项3");
+              },
+              child: const Text("选项3"),
+            ),
+          ],
+        )
+    );
+    print("返回值：$result");
+  }
+```
+
+![image-20240303005251254](https://www.z4a.net/images/2024/03/03/image-20240303005251254.png)
+
+### 自定义Dialog
+
+------
+
+通过继承Dialog这个类，可以创建出高自定义的Dialog
+
+![image-20240303005520021](https://www.z4a.net/images/2024/03/03/image-20240303005520021.png)
+
+```dart
+class CustomDialog extends Dialog{
+  String title;
+  TextStyle titleTextStyle;
+  String content;
+  TextStyle contentTextStyle;
+  Color barrierColor;
+  Color backgroundColor;
+  double height;
+  double width;
+  Function()? onFinish;
+  CustomDialog({
+    super.key,
+    required this.title,
+    required this.onFinish,
+    this.content = "",
+    this.barrierColor = Colors.black12,
+    this.backgroundColor = Colors.brown,
+    this.width = 300,
+    this.height = 300,
+    this.titleTextStyle = const TextStyle(
+      fontSize: 30,
+      fontWeight: FontWeight.bold,
+      color: Colors.white
+    ),
+    this.contentTextStyle = const TextStyle(
+        fontSize: 12,
+        fontWeight: FontWeight.normal,
+        color: Colors.white
+    ),
+  });
+
+  @override
+  Widget build(BuildContext context) {
+    return Material(
+      type: MaterialType.transparency,
+      child: Stack(
+        children: [
+          Container(height: double.infinity,width: double.infinity,color: barrierColor,),
+          Center(
+            child: Container(
+              width: width,
+              height: height,
+              padding: const EdgeInsets.all(10),
+              decoration: BoxDecoration(
+                color: backgroundColor,
+                borderRadius: BorderRadius.circular(20)
+              ),
+              child: Stack(
+                children: [
+                  Align(
+                    alignment: Alignment.topCenter,
+                    child: Text(
+                        title,
+                        style: titleTextStyle
+                    ),
+                  ),
+                  Align(
+                    alignment: Alignment.centerLeft,
+                    child: Text(
+                      content,
+                      style: contentTextStyle,
+                    ),
+                  ),
+                  Align(
+                    alignment: Alignment.bottomCenter,
+                    child: Container(
+                      height: 50,
+                      child: Column(
+                        children: [
+                          Container(height: 2,color: Colors.white,),
+                          Container(
+                            height: 48,
+                            child: Flex(
+                              direction: Axis.horizontal,
+                              children: [
+                                Expanded(
+                                  flex: 1,
+                                    child: TextButton(
+                                        onPressed: (){
+                                          Navigator.pop(context,"confirm");
+                                          onFinish;
+                                        },
+                                        child: const Text(
+                                          "确定",
+                                          style: TextStyle(
+                                              color: Colors.white
+                                          ),
+                                        )
+                                    )
+                                ),
+                                Container(width: 2,color: Colors.white,),
+                                Expanded(
+                                  flex: 1,
+                                    child: TextButton(
+                                        onPressed: (){
+                                          Navigator.pop(context,"cancel");
+                                        },
+                                        child: const Text(
+                                          "取消",
+                                          style: TextStyle(
+                                              color: Colors.white
+                                          ),
+                                        )
+                                    )
+                                )
+                              ],
+                            ),
+                          )
+                        ],
+                      ),
+                    )
+                  )
+                ],
+              ),
+            ),
+          )
+        ],
+      ),
+    );
+  }
+}
+```
+
+
+
 # 路由
+
+------
 
 在使用`MaterialApp()`时，可以使用路由，来实现页面之间的切换，而这里面的路由实现方式是通过将页面加入**栈**与移出**栈**的思想
 
 ## 最简单的页面切换
+
+------
 
 通过使用`Navigator.push`来将新页面加入**栈**
 
@@ -2392,6 +2685,8 @@ Navigator.push(context, MaterialPageRoute(
 ```
 
 ## 传参数入页面
+
+------
 
 1. 新建一个**页面**，和一个**实体类**，并在页面入口方法中**添加属性**
 
@@ -2452,6 +2747,8 @@ Navigator.push(context, MaterialPageRoute(
 
 ## 退出页面返回值
 
+------
+
 通过`Navigator.push`加入的页面，左上角都会有一个**返回**的按钮，但是这个按钮**返回值**为`null`，所以需要`Navigator.pop`在退出页面时，返回一个值
 
 1. 新建一个页面，并添加一个按钮，添加点击事件，使用`Navigator.pop`返回页面
@@ -2502,6 +2799,8 @@ Navigator.push(context, MaterialPageRoute(
 
 ## 使用MaterialApp()的routes
 
+------
+
 `MaterialApp()`有个routes属性，这个属性是为了方便添加页面，形式为`"路由名":(context) => const 页面()`
 
 ```dart
@@ -2514,6 +2813,8 @@ routes: {
 然后我们就可以通过`Navigator.pushNamed(context,"路由名")`去进入页面
 
 ### 传参问题
+
+------
 
 因为通过routes命名路由进入页面的方式无法直接传输参数，但是Navigator.pushNamed里的arguments可以将参数传输到页面里
 
@@ -2566,6 +2867,8 @@ routes: {
 
 ### 返回值[与普通的一样]
 
+------
+
 返回值的方法与普通进入页面的方法一样，没有问题
 
 效果：
@@ -2575,6 +2878,8 @@ routes: {
 
 
 ## route的钩子函数
+
+------
 
 顾名思义就是访问routes时，执行的函数
 
@@ -2586,7 +2891,10 @@ routes: {
 
 ### onGenerateRoute与onUnknownRoute
 
+------
+
 #### onGenerateRoute
+
 
 这个函数的使用方法是为了：
 
@@ -2677,6 +2985,8 @@ class NoExitPage extends StatelessWidget{
 ```
 
 ### navigatorObservers
+
+------
 
 这个钩子函数，会全程监控页面的入栈和出栈，只要栈堆有变化，就会执行
 
