博客提更新 修BUG

--- a/_posts/2024-07-3-Qml基础教程.md
+++ b/_posts/2024-07-3-Qml基础教程.md
@@ -223,7 +223,7 @@ opacity: 0.5
 
 其实了解了窗口的属性，其他的属性也都是差不多的，`id`是为了方便获取组件中的属性值
 
-```CSS
+```css
 	Rectangle{
         id:rect//每个组件都可以有id，但是不能重复
         x:120
